<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
	</properties>
	<modelVersion>4.0.0</modelVersion>
	<groupId>de.amr.easy.game</groupId>
	<artifactId>EasyGame</artifactId>
	<version>0.0.1-SNAPSHOT</version>
	<name>EasyGame</name>
	<description>Simple Java 2D game engine</description>
	<build>
		<plugins>
			<plugin>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.7.0</version>
				<configuration>
					<source>1.8</source>
					<target>1.8</target>
				</configuration>
			</plugin>
		</plugins>
	</build>
	<dependencies>
		<dependency>
			<groupId>com.miglayout</groupId>
			<artifactId>miglayout-swing</artifactId>
			<version>5.2</version>
		</dependency>
		<dependency>
			<groupId>com.beust</groupId>
			<artifactId>jcommander</artifactId>
			<version>1.72</version>
		</dependency>
		<!-- https://mvnrepository.com/artifact/com.googlecode.soundlibs/tritonus-share -->
		<!-- https://mvnrepository.com/artifact/com.googlecode.soundlibs/mp3spi -->
		<dependency>
			<groupId>de.amr.statemachine</groupId>
			<artifactId>StateMachine</artifactId>
			<version>0.0.1-SNAPSHOT</version>
		</dependency>
		<dependency>
			<groupId>com.googlecode.soundlibs</groupId>
			<artifactId>mp3spi</artifactId>
			<version>1.9.5-1</version>
		</dependency>
	</dependencies>
</project>